SERVER-73662 tlsClusterCAFile is not being used to validate client certificates on Windows